--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,8 @@
 :root {
     --text-color: white;
+    --text-color-secondary: grey;
     --background-color: #1c1b1e;
+    --transition-duration: 0.2s;
 }
 
 @font-face {
@@ -18,34 +20,18 @@ body {
     font-family: "URW Gothic", sans-serif;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 1rem;
+    height: auto;
+}
+
 a {
     text-decoration: none;
     font-weight: bold;
     font-variant: small-caps;
     color: var(--text-color);
-}
-
-button {
-    font-variant: small-caps;
-    font-weight: bold;
-    text-align: center;
-    border-radius: 2em;
-    padding: 0.5em 1em;
-    border: none;
-    white-space: nowrap;
-}
-
-.button-primary {
-    color: var(--background-color);
-    background-color: var(--text-color);
-}
-
-.button-secondary {
-    color: var(--text-color);
-    background-color: var(--background-color);
-    border: solid 2px var(--text-color);
-}
-
-button:hover {
-    cursor: pointer;
+    transition: var(--transition-duration);
 }
