add favicon and projects thumbnails

--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,7 @@
     --text-color: white;
     --text-color-secondary: grey;
     --background-color: #1c1b1e;
+    --accent-color: goldenrod;
     --transition-duration: 0.2s;
 }
 
