--- a/src/global.css
+++ b/src/global.css
@@ -2,17 +2,18 @@
     --text-primary-light: #4C4F69;
     --text-secondary-light: #86899A;
     --background-primary-light: #EFF1F5;
-    --background-secondary-light: white;
+    --background-secondary-light: #CCD0DA;
+    --background-secondary-light-transparent: #CCD0DA66;
     --accent-color-light: #1D64F2;
 
     --text-primary-dark: #C6D0F5;
     --text-secondary-dark: #828AA6;
-    --background-primary-dark: #292C3C;
+    --background-primary-dark: #303446;
     --background-secondary-dark: #414559;
+    --background-secondary-dark-transparent: #41455966;
     --accent-color-dark: #8CAAEE;
 
     --transition-duration: 0.2s;
-
     transition: var(--transition-duration) background-color, var(--transition-duration) color;
 }
 
@@ -21,6 +22,7 @@
     --text-secondary: var(--text-secondary-light);
     --background-primary: var(--background-primary-light);
     --background-secondary: var(--background-secondary-light);
+    --background-secondary-transparent: var(--background-secondary-light-transparent);
     --accent-color: var(--accent-color-light);
 }
 
@@ -29,6 +31,7 @@
     --text-secondary: var(--text-secondary-dark);
     --background-primary: var(--background-primary-dark);
     --background-secondary: var(--background-secondary-dark);
+    --background-secondary-transparent: var(--background-secondary-dark-transparent);
     --accent-color: var(--accent-color-dark);
 }
 
