--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
     --background-primary-light: #EFF1F5;
     --background-secondary-light: #CCD0DA;
     --background-secondary-light-transparent: #CCD0DA66;
-    --accent-color-light: #1D64F2;
+    --accent-color-light: #7287fd;
 
     --text-primary-dark: #C6D0F5;
     --text-secondary-dark: #828AA6;
@@ -48,13 +48,16 @@ body {
     scrollbar-width: thin;
     scrollbar-color: var(--accent-color) transparent;
 }
+
 body::-webkit-scrollbar {
     width: 10px;
 }
+
 body::-webkit-scrollbar-thumb {
     background-color: var(--accent-color);
     border-radius: 10px;
 }
+
 body::-webkit-scrollbar-track {
     background-color: transparent;
 }
@@ -71,5 +74,9 @@ h1 {
     font-weight: 500;
     font-style: normal;
     margin-bottom: 0;
+    letter-spacing: -0.05em;
 }
 
+.highlighted-tile {
+    opacity: 0.15 !important;
+}
