--- a/src/global.css
+++ b/src/global.css
@@ -1,38 +1,77 @@
 :root {
-    --text-color: white;
-    --text-color-secondary: grey;
-    --background-color: #1c1b1e;
-    --accent-color: goldenrod;
+    --text-primary-light: #3C3836;
+    --text-secondary-light: #928374;
+    --background-primary-light: #F9F5D7;
+    --background-secondary-light: #EBDBB2;
+    --background-secondary-light-transparent: #EBDBB266;
+    --pattern-light: #F9F5D7;
+    --accent-color-light: #79740E;
+
+    --text-primary-dark: #C6D0F5;
+    --text-secondary-dark: #828AA6;
+    --background-primary-dark: #303446;
+    --background-secondary-dark: #414559;
+    --background-secondary-dark-transparent: #41455966;
+    --pattern-dark: #C6D0F5;
+    --accent-color-dark: #8CAAEE;
+
     --transition-duration: 0.2s;
+    transition: var(--transition-duration) background-color, var(--transition-duration) color;
 }
 
-@font-face {
-    font-family: "URW Gothic";
-    src: url("./urw-gothic.ttf");
+.light-theme {
+    --text-primary: var(--text-primary-light);
+    --text-secondary: var(--text-secondary-light);
+    --background-primary: var(--background-primary-light);
+    --background-secondary: var(--background-secondary-light);
+    --background-secondary-transparent: var(--background-secondary-light-transparent);
+    --pattern: var(--pattern-light);
+    --accent-color: var(--accent-color-light);
+}
+
+.dark-theme {
+    --text-primary: var(--text-primary-dark);
+    --text-secondary: var(--text-secondary-dark);
+    --background-primary: var(--background-primary-dark);
+    --background-secondary: var(--background-secondary-dark);
+    --background-secondary-transparent: var(--background-secondary-dark-transparent);
+    --pattern: var(--pattern-dark);
+    --accent-color: var(--accent-color-dark);
 }
 
 html,
 body {
-    color: var(--text-color);
     margin: 0;
     padding: 0;
     height: 100%;
-    font-family: "URW Gothic", sans-serif;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    padding: 1rem;
-    height: auto;
-    background-color: var(--background-color);
+    font-family: 'Courier New', Courier, monospace;
+    color: var(--text-primary);
+    scrollbar-width: thin;
+    scrollbar-color: var(--accent-color) transparent;
+}
+
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background-color: var(--accent-color);
+    border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
 a {
+    color: var(--text-primary);
     text-decoration: none;
-    font-weight: bold;
-    font-variant: small-caps;
-    color: var(--text-color);
     transition: var(--transition-duration);
+}
+
+.highlighted-tile {
+    opacity: 0.15 !important;
 }
