--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
     --background-primary-light: #F9F5D7;
     --background-secondary-light: #EBDBB2;
     --background-secondary-light-transparent: #EBDBB266;
-    --pattern-light: #F9F5D7;
+    --pattern-light: #3C3836;
     --accent-color-light: #79740E;
 
     --text-primary-dark: #C6D0F5;
