--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,5 @@
 :root {
+    /* light theme : gruvbox */
     --text-primary-light: #3c3836;
     --text-secondary-light: #928374;
     --background-primary-light: #f9f5d7;
@@ -7,6 +8,7 @@
     --pattern-light: #3c3836;
     --accent-light: #79740e;
     --bg-light: url("/light.jpg");
+    /* dark theme : catppuccin frappe */
     --text-primary-dark: #c6d0f5;
     --text-secondary-dark: #828aa6;
     --background-primary-dark: #303446;
